<resources>
    <string name="app_name">Book Store App</string>

    <!-- Menu items Strings -->
    <string name="save">Save</string>

    <!-- Edit Text Strings -->
    <string name="product_name_hint">Product Name</string>
    <string name="price_hint">Price</string>
    <string name="currency_label">pln</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_name_label">Supplier Name</string>
    <string name="supplier_phone_number_hint">Supplier Phone Number</string>
    <string name="edit_activity_label">Edit Book</string>
    <string name="catalog_activity_label">Books Catalog</string>
    <string name="supplier_name_unknown_case">Unknown</string>
</resources>
